--- a/package.json
+++ b/package.json
@@ -5,11 +5,19 @@
   "dependencies": {
     "bootstrap": "4.0.0",
     "font-awesome": "^4.7.0",
+    "prop-types": "^15.6.2",
     "react": "^16.4.2",
     "react-animation-components": "^3.0.0",
     "react-dom": "^16.4.2",
+    "react-popper": "^1.0.2",
+    "react-redux": "^5.0.7",
+    "react-redux-form": "1.16.8",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
-    "reactstrap": "5.0.0"
+    "reactstrap": "5.0.0",
+    "redux": "^4.0.0",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
